<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:fresco="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        xmlns:card_view="http://schemas.android.com/tools"
        card_view:cardBackgroundColor="@android:color/black"
        android:layout_height="175dp"
        android:id="@+id/overviewPersonCardView"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/personPoster"
        android:contentDescription="Person poster"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        fresco:viewAspectRatio="@dimen/poster_ratio"
        fresco:placeholderImage="@drawable/poster_default_placeholder"
        fresco:placeholderImageScaleType="centerCrop"
        fresco:failureImage="@drawable/poster_default_error"
        android:src="@drawable/poster_default_placeholder" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/personDetailsDetailsLayout"
        android:background="@color/cardview_kubrick_default_color">

        <TextView
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/category_color_1"
            android:text="@string/person_name_default"
            android:shadowColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="118dp"
            android:layout_marginStart="118dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/personJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/category_color_1"
            android:text="@string/person_job_default"
            android:shadowColor="#000000"
            android:textStyle="bold"
            android:layout_below="@+id/personName"
            android:layout_alignLeft="@+id/personName"
            android:layout_alignStart="@+id/personName" />

        <TextView
            android:id="@+id/personBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/category_color_1"
            android:text="@string/person_birth_default"
            android:shadowColor="#000000"
            android:layout_below="@+id/personJob"
            android:layout_alignLeft="@+id/personJob"
            android:layout_alignStart="@+id/personJob" />

        <TextView
            android:id="@+id/personDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/category_color_1"
            android:text="@string/person_death_default"
            android:shadowColor="#000000"
            android:layout_below="@+id/personBirth"
            android:layout_alignLeft="@+id/personName"
            android:layout_alignStart="@+id/personName" />

    </RelativeLayout>

</android.support.v7.widget.CardView>